tests/snapshots/runtime_error_fixtures/indirect_call_not_callable.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
assertion_line: 136
---
Fixture: examples/runtime_errors/indirect_call_not_callable.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • examples/runtime_errors/indirect_call_not_callable.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `f`.

  examples/runtime_errors/indirect_call_not_callable.flx:3:19
  |
3 |     let ignored = f(2)
  |                   ^^^^
  |                   ---- this argument has type `(Int) -> _ with |_`

  |                   ---- this call argument produces the conflicting type

Note:
  expected argument type: Int
  found argument type: (Int) -> _ with |_
  the actual argument type is inferred from this expression
  the actual argument type is inferred from this expression

Help:
  Pass a `Int` value as the 1st argument.
